--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -151,6 +151,7 @@ $screen-unsupported: 240px;
 
     --dark-normal: #2B2727;
     --dark-static: #2B2727;
+    --dark-background: #00000033;
 
     --blue-dark: #002B76;
     --blue-deep: #003DAE;
@@ -177,6 +178,7 @@ $screen-unsupported: 240px;
 
     --dark-normal: #C1C1C2;
     --dark-static: #2B2727;
+    --dark-background: #00000099;
 
     --blue-dark: #0242af;
     --blue-deep: #003fb5;
